# HDF5Translator

./: .gitignore  README.md  pyproject.toml  tox.ini
HDF5Translator/: __init__.py  translator.py  translator_elements.py
HDF5Translator/tools/: edf_to_h5.py  post_translation_hdf5_stacker.py  update_yaml_configs_from_excel.py
HDF5Translator/utils/: __init__.py  configure_logging.py  hdf5_utils.py  validators.py
doc/: Data_preparation_flow.drawio
example_configurations/: README_DOWNLOADING_EXAMPLES.md  example_attributes_config.yaml  example_base_structure.yaml  example_translation_config.yaml
src/HDF5Translator/: __init__.py  __main__.py  translator.py  translator_elements.py
src/HDF5Translator/utils/: argparse_utils.py  attributes_reader.py  config_reader.py  data_utils.py  hdf5_utils.py  validators.py
src/tests/: test_hdf5_utils.py
src/tools/: edf_to_h5.py  edf_to_nxs.py  excel_translator.py  hdf5_add_attributes.py  hdf5_copy_tree.py  hdf5_stacker.py  image_to_h5.py  post_translation_hdf5_stacker.py  post_translation_operation_MOUSE_beamanalysis.py  post_translation_operation_template.py
tests/: download_examples.py  mouse_allsteps.sh  py310_requirements.txt  py311_requirements.txt  py312_requirements.txt  tug_allsteps.sh  uw_allsteps.sh
